style.css
html {
	font-family: Helvetica;
	font-size: 22px;
	color: seashell;
	background-color: black;
	text-align: center;
}

header {
	display: flex;
	align-items: center;
	position: fixed;
	z-index: 1;
	width: 100%;
	height: 69	px;
	background-color: black;
	opacity: 0.9;
	border-bottom: 1px solid seashell;
}

.logo {
	display: flex;
	align-items: center;
	flex-grow: 1;
	padding-left: 10px;
}

.logo img {
	height: 50px;
}

header nav {
	padding-right: 10px;
}

nav span {
	display: inline-block;
	padding: 20px 10px;
}

a {
	color: seashell;
	text-decoration: underline;
}

.content {
	align-items: center;
	text-align: center;
	padding-top: 70px;
}

.Mission {
	background-image: url("./mission-background.jpg");
	background-repeat: no-repeat;
	background-position: center;
	display: flex;
	flex-direction: row;
	margin-top: auto;
	justify-content: center;
	align-items: center;
	height: 700px;
}

.mission-content {
	width: 1200px;
	background-color: black;
}

.Featured {
	width: 1000px;
	padding: 40px 0px;
	margin: auto;
	flex-wrap: wrap;
}

.tea {
	display: inline-block;
	flex-wrap: wrap;
}

.tea img {
	width: 300px;
	height: 200px;
	margin: 0px 10px;
}

.Locations {
	background-image: url("./locations-background.jpg");
	margin: auto;
	flex-wrap: wrap;
	width: 1200px;
	height: 500px;
}

.location-data {
	display: inline-block;
	width: 300px;
	margin: 15px 20px;
	background-color: black;
	padding-top: 15px;
	opacity: 1;
}

footer {
	height: 200px;
}

